# AES_C

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  aes_helper.c  aes_lib.c  aes_main.c
src/include/: aes_helper.h  aes_lib.h
tests/: CMakeLists.txt  aes_helper_tests.c  aes_lib_tests.c  munit.c  munit.h
